# bevy_julia

./: Cargo.toml  flake.nix
assets/: path.csv
assets/shaders/: colormap.wgsl  julia.wgsl
src/: colormap.rs  colorramp.rs  julia.rs  main.rs
