[package]
name = "julia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.0"
bevy_better_exit = { git = "https://github.com/polygon/bevy_better_exit", branch = "main" }
csv = "1.1"
palette = "0.6"
